Corrected an issue that caused the button actions to be sluggish to respond to the users click on iOS. closes #189 Extended the scope of UI elements that are not text selectable. closes #125

--- a/gwt-cordova/src/main/webapp/GraphemeColour.css
+++ b/gwt-cordova/src/main/webapp/GraphemeColour.css
@@ -91,7 +91,7 @@
     width: 100%;
 }
 
-.stimulusScreen, .menuTable, .gwt-Label.stimulusProgressLabel, .gwt-Button.nextButton, .gwt-Button.menuButton,.gwt-Button.stimulusHelpButton, .gwt-Button.stimulusQuitButton, .gwt-Button.stimulusButton, .gwt-Button.optionButton, .gwt-Label.headerButton {
+#widgetTag, .stimulusScreen, .menuTable, .gwt-Label.stimulusProgressLabel, .gwt-Button.nextButton, .gwt-Button.menuButton,.gwt-Button.stimulusHelpButton, .gwt-Button.stimulusQuitButton, .gwt-Button.stimulusButton, .gwt-Button.optionButton, .gwt-Label.headerButton {
     /* prevent text selection on the buttons */
     -webkit-touch-callout: none;
     -webkit-user-select: none;
